--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel ="stylesheet" href="style.css">
+    <script src="jQuery.js" charset = "utf-8"></script>
+    <script src = "client.js"></script>
 </head>
 <body>
     
