--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salary Calculator</title>
     <link rel ="stylesheet" href="style.css">
     <script src="jQuery.js" charset = "utf-8"></script>
     <script src = "client.js"></script>
 </head>
 <body>
-    
+    <h1>Salary Calculator</h1>
+    <hr>
+    <input id ="first-name" type="text" placeholder="First Name"/>
+    <input id ="last-name" type="text" placeholder="Last Name"/>
+    <input id ="employee-ID" type="number" placeholder="Employee ID"/>
+    <input id ="employee-title" type="text" placeholder="Title"/>
+    <input id ="annual-salary" type="text" placeholder="Annual Salary"/>
+
 </body>
 </html>
