added html table

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,9 +14,26 @@
     <hr>
     <input id ="first-name" type="text" placeholder="First Name"/>
     <input id ="last-name" type="text" placeholder="Last Name"/>
-    <input id ="employee-ID" type="number" placeholder="Employee ID"/>
+    <input id ="employee-ID" type="number" placeholder="ID"/>
     <input id ="employee-title" type="text" placeholder="Title"/>
     <input id ="annual-salary" type="text" placeholder="Annual Salary"/>
+    <br>
+    <button id="add-employee-button">Submit</button>
+
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Title</th>
+                <th>Annual Salary</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody id="employee-table">
+
+        </tbody>
+    </table>
 
 </body>
 </html>
