created variables for input and wrote function to append to DOM

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,11 +14,11 @@
     <hr>
     <input id ="first-name" type="text" placeholder="First Name"/>
     <input id ="last-name" type="text" placeholder="Last Name"/>
-    <input id ="employee-ID" type="number" placeholder="ID"/>
+    <input id ="employeeID" type="number" placeholder="ID"/>
     <input id ="employee-title" type="text" placeholder="Title"/>
-    <input id ="annual-salary" type="text" placeholder="Annual Salary"/>
+    <input id ="annual-salary" type="number" placeholder="Annual Salary"/>
     <br>
-    <button id="add-employee-button">Submit</button>
+    <button id="submit-button">Submit</button>
 
     <table>
         <thead>
