added total cost function and added appending to DOM

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salary Calculator</title>
-    <link rel ="stylesheet" href="style.css">
-    <script src="jQuery.js" charset = "utf-8"></script>
-    <script src = "client.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="jQuery.js" charset="utf-8"></script>
+    <script src="client.js"></script>
 </head>
+
 <body>
     <h1>Salary Calculator</h1>
     <hr>
-    <input id ="first-name" type="text" placeholder="First Name"/>
-    <input id ="last-name" type="text" placeholder="Last Name"/>
-    <input id ="employeeID" type="number" placeholder="ID"/>
-    <input id ="employee-title" type="text" placeholder="Title"/>
-    <input id ="annual-salary" type="number" placeholder="Annual Salary"/>
+    <input id="first-name" type="text" placeholder="First Name" />
+    <input id="last-name" type="text" placeholder="Last Name" />
+    <input id="employeeID" type="number" placeholder="ID" />
+    <input id="employee-title" type="text" placeholder="Title" />
+    <input id="annual-salary" type="number" placeholder="Annual Salary" />
     <br>
     <button id="submit-button">Submit</button>
 
@@ -34,6 +36,7 @@
 
         </tbody>
     </table>
-
+    <h2 id="monthly-costs">Total Monthly Costs</h2>
 </body>
+
 </html>
