added separate div for total costs to allow styling

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -36,7 +36,8 @@
 
         </tbody>
     </table>
-    <h2 id="monthly-costs">Total Monthly Costs</h2>
+    <h2 id="monthly-cost-label">Total Monthly Costs</h2>
+    <h2 id="monthly-cost-value">Money</h2>
 </body>
 
 </html>
