working on styling

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,14 +14,18 @@
 <body>
     <h1>Salary Calculator</h1>
     <hr>
+    <div id = "input-fields">
     <input id="first-name" type="text" placeholder="First Name" />
     <input id="last-name" type="text" placeholder="Last Name" />
     <input id="employeeID" type="number" placeholder="ID" />
     <input id="employee-title" type="text" placeholder="Title" />
     <input id="annual-salary" type="number" placeholder="Annual Salary" />
     <br>
-    <button id="submit-button">Submit</button>
-
+    </div>
+    <div id="submit-placement">
+    <button class = "round" id="submit-button">Submit</button>
+    </div>
+    <br>
     <table>
         <thead>
             <tr>
